# bdr_scripts_public

./: .gitignore  AGENTS.md  README.md
deletion/: README.md  pyproject.toml  via_rocfl.py
validate_mods/: pyproject.toml  readme.md  test_validate_mods_code.py  validate_mods_code.py
validate_mods/example_mods/: invalid_mods.xml  valid_mods.xml
