[project]
name = "validate-mods"
version = "0.0.0"
description = "Validates MODS XML file against its embedded schema."
readme = "https://github.com/Brown-University-Library/bdr_scripts_public/blob/main/validate_mods/readme.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx~=0.28.0",
    "lxml~=5.3.0",
]

[dependency-groups]
local = []
staging = []
prod = []
